fixing spacing issues in header for hudson yards infrastructure corperation

--- a/source/webapp/sites/all/themes/checkbook3/css/trends.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/trends.css
@@ -30,7 +30,8 @@ body.page-featured-trends h1#page-title,
 body.page-all-trends h1#page-title,
 body.page-trends-landing h1#page-title,
 body.page-featuredtrends  h1#page-title,
-body.page-trends-landing-trends h1#page-titleSpecial{
+body.page-trends-landing-trends h1#page-titleSpecial,
+body.page-trends h1#page-titleSpecial{
     margin-top:6px;
     line-height: 42px;
 }
